--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
+/* App.css */
+body{
+  margin-top: 60px;
+  background-color: cornsilk;
+  font-family: 'Libre Baskerville', serif;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+    background-color: aliceblue;
+    font-family: 'Libre Baskerville', serif;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  h2 {
+    margin-bottom: 20px;
+    color: chocolate;
   }
-  to {
-    transform: rotate(360deg);
+
+  h1 {
+    margin-bottom: 20px;
+    color: chocolate;
   }
-}
+  
+
+  .check-bx{
+    display: flex;
+    align-items: baseline;
+  }
+
+
+  .question{
+    color: brown;
+    text-decoration-line: underline;
+  }
+  .remove-btn{
+    height: auto;
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 90px;
+    cursor: pointer;
+
+  }
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
+  label {
+    display: block;
+
+    margin-top: 5px;
+    color: brown;
+    margin-bottom: 5px;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="password"],
+  input[type="number"],
+  input[type="date"],
+  textarea,
+  select {
+    width: 100%;
+    margin-top: 5px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+  
+  button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #dba322;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #0056b3;
+  }
+  
+  .error-message {
+    color: red;
+  }
+  
+  
+  @media screen and (min-width: 768px) {
+    .App {
+      padding: 40px;
+    }
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .App {
+      max-width: 1000px;
+    }
+  }
+  
